# jumping_leg

./: CMakeLists.txt  package.xml
config/: controllers.yaml  view_robot.rviz
launch/: spawn_gazebo.launch.py  view_rviz.launch.py
mesh/: hip_link.stl  shin_link.stl  thigh_link.stl
src/: jump_node.cpp  jump_node_hz.cpp  write_and_pub.cpp
urdf/: robot.urdf  robot_for_sim.urdf
